--- a/fallingDrop_fokkerPlanck.ipynb
+++ b/fallingDrop_fokkerPlanck.ipynb
@@ -294,6 +294,60 @@
     "plt.savefig(\"figures/fpe_2d_map.png\")\n",
     "plt.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not os.path.isdir(\"animations\"):\n",
+    "    os.makedirs(\"animations\")\n",
+    "make_animations = True\n",
+    "fileName = \"animations/fpe_evolution.mp4\"\n",
+    "\n",
+    "fig = plt.figure(itr, figsize=(10, 8))\n",
+    "ax = plt.gca()\n",
+    "circle = Circle((center_x, center_y), radius, fill=False)\n",
+    "ax.add_patch(circle)\n",
+    "cmap = mpl.colormaps.get_cmap(\"jet\")\n",
+    "scat = ax.scatter(mesh_x.T, mesh_y.T, marker='o', s=20,\n",
+    "                  c=pFinal[0, :, :], cmap=cmap,\n",
+    "                  vmin=v_min[itr], vmax=v_max[itr])\n",
+    "cbar = plt.colorbar(scat)\n",
+    "cbar.set_label(r\"$\\tilde{p}(r, \\theta, t)$\", size=20, labelpad=10)\n",
+    "cbar.ax.tick_params(labelsize=15)\n",
+    "ax.set_xlabel(r\"x\", fontsize=18)\n",
+    "ax.set_ylabel(r\"y\", fontsize=18)\n",
+    "ax.text(-0.35, 0.35, r\"$t = \" + str(0 * 1000 * 0.01) + r\"$\",\n",
+    "        fontsize=20)\n",
+    "ax.set_xticks([-0.4, -0.2, 0, 0.2, 0.4])\n",
+    "ax.set_xticklabels([-0.4, -0.2, 0, 0.2, 0.4], fontsize=15)\n",
+    "ax.set_yticks([-0.4, -0.2, 0, 0.2, 0.4])\n",
+    "ax.set_yticklabels([-0.4, -0.2, 0, 0.2, 0.4], fontsize=15)\n",
+    "\n",
+    "\n",
+    "def update(frame):\n",
+    "    plt.cla()\n",
+    "    circle = Circle((center_x, center_y), radius, fill=False)\n",
+    "    ax.add_patch(circle)\n",
+    "    cmap = mpl.colormaps.get_cmap(\"jet\")\n",
+    "    scat = ax.scatter(mesh_x.T, mesh_y.T, marker='o', s=20,\n",
+    "                    c=pFinal[frame, :, :], cmap=cmap,\n",
+    "                    vmin=v_min[itr], vmax=v_max[itr])\n",
+    "    ax.set_xlabel(r\"x\", fontsize=18)\n",
+    "    ax.set_ylabel(r\"y\", fontsize=18)\n",
+    "    ax.text(-0.35, 0.35, r\"$t = \" + str(frame * 1000 * 0.01) + r\"$\",\n",
+    "            fontsize=20)\n",
+    "    ax.set_xticks([-0.4, -0.2, 0, 0.2, 0.4])\n",
+    "    ax.set_xticklabels([-0.4, -0.2, 0, 0.2, 0.4], fontsize=15)\n",
+    "    ax.set_yticks([-0.4, -0.2, 0, 0.2, 0.4])\n",
+    "    ax.set_yticklabels([-0.4, -0.2, 0, 0.2, 0.4], fontsize=15)\n",
+    "\n",
+    "if make_animations is True:\n",
+    "    anim = FuncAnimation(fig=fig, func=update, frames=pFinal.shape[0], interval=1)\n",
+    "    anim.save(fileName, writer=\"ffmpeg\", fps = 10)"
+   ]
   }
  ],
  "metadata": {
